@@ -44,15 +44,6 @@ op_phrasekick = 0
 op_spam_cachesize = 4
 
 
-#########################
-# HOSTBOT CONFIGURATION #
-#########################
-
-### do you want to interact with a GHost++ bot?
-ghost_connect = 0
-ghost_account = 
-
-
 ##########################
 # DATABASE CONFIGURATION #
 ##########################
@@ -85,7 +76,7 @@ bnet_username =
 bnet_password = 
 bnet_firstchannel = The Void
 
-### different trigger from hostbot recommended
+### command trigger that the bot will respond to
 bnet_commandtrigger = .
 
 bnet_rootadmin = 
